--- a/spherical_intersection/standalone/CMakeLists.txt
+++ b/spherical_intersection/standalone/CMakeLists.txt
@@ -11,11 +11,14 @@ if (NOT SPHERICAL_INTERSECTION_SRC_DIR)
 endif()
 find_package(Threads REQUIRED)
 add_executable(standalone src/standalone.cpp)
+add_executable(profiles src/profiles.cpp)
 add_subdirectory(input_parser)
 add_subdirectory(timer)
 add_subdirectory(object_io)
 target_link_libraries(standalone Threads::Threads ${SPHERICAL_INTERSECTION_LIB} input_parser timer object_io)
+target_link_libraries(profiles Threads::Threads ${SPHERICAL_INTERSECTION_LIB} input_parser timer object_io)
 target_include_directories(standalone PRIVATE ${SPHERICAL_INTERSECTION_SRC_DIR}/include input_parser/include object_io/include timer/include)
+target_include_directories(profiles PRIVATE ${SPHERICAL_INTERSECTION_SRC_DIR}/include input_parser/include object_io/include timer/include)
 if (NOT CMAKE_BUILD_TYPE)
 	message(STATUS "Using default build type: Release")
 	set(CMAKE_BUILD_TYPE Release)
