- added spherical intersection to .gitlab-ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,15 @@ windows:
     - export PATH="/mxe/usr/bin:$PATH"
     - export PATH="/mxe/usr/x86_64-w64-mingw32.static/qt5/bin:$PATH"
     - export QT_SELECT=qt5
+	# build spherical intersection lib
+    - cd external/spherical_intersection
+    - mkdib build
+    - cd build
+    - /mxe/usr/bin/x86_64-w64-mingw32.static-cmake ..
+    - /mxe/usr/bin/x86_64-w64-mingw32.static-cmake --build . --config Release
+    - cp libspherical_intersection ../
+    - cd ../../
+
     # build libpsalm
     - cd external/libpsalmBoostless
     - mkdir build
@@ -71,6 +80,16 @@ ubuntu bionic:
     - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-8 10
     - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-8 10
     - export QT_SELECT=qt5
+
+	# build spherical intersection lib
+    - cd external/spherical_intersection
+    - mkdib build
+    - cd build
+    - cmake ..
+    - cmake --build . --config Release
+    - cp libspherical_intersection ../
+    - cd ../../
+
     # build libpsalm
     - cd external/libpsalmBoostless
     - mkdir build
@@ -115,6 +134,16 @@ manjaro arch:
    - pacman -S gcc glibc cmake boost unzip qtcreator make cairo git --noconfirm
   script:
     - export QT_SELECT=qt5
+
+	# build spherical intersection lib
+    - cd external/spherical_intersection
+    - mkdib build
+    - cd build
+    - cmake ..
+    - cmake --build . --config Release
+    - cp libspherical_intersection ../
+    - cd ../../
+
     # build libpsalm
     - cd external/libpsalmBoostless
     - mkdir build
