--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,8 +18,8 @@ windows:
     # build gigamesh
     - mkdir build
     - cd build
-    - /mxe/usr/bin/x86_64-w64-mingw32.static-cmake ..
-    - /mxe/usr/bin/x86_64-w64-mingw32.static-cmake --build . --config Release
+    - /mxe/usr/bin/x86_64-w64-mingw32.static-cmake .. -DCMAKE_BUILD_TYPE=Release -G"Unix Makefiles"
+    - /mxe/usr/bin/x86_64-w64-mingw32.static-make -j
     - cd ..
 
   artifacts:
@@ -50,19 +50,19 @@ ubuntu bionic:
     # build gigamesh
     - mkdir build
     - cd build
-    - cmake ..
-    - cmake --build . --config Release
+    - cmake .. -DCMAKE_BUILD_TYPE=Release -G"Unix Makefiles"
+    - make -j
     - cd ..
 
   artifacts:
     name: "gigamesh_bionic"
     paths:
-      - gui/gigamesh.exe
-      - clt/gigamesh-featurevectors.exe
-      - clt/gigamesh-tolegacy.exe
-      - clt/gigamesh-clean.exe
-      - clt/gigamesh-info.exe
-      - clt/gigamesh-borders.exe
+      - build/gui/gigamesh.exe
+      - build/clt/gigamesh-featurevectors.exe
+      - build/clt/gigamesh-tolegacy.exe
+      - build/clt/gigamesh-clean.exe
+      - build/clt/gigamesh-info.exe
+      - build/clt/gigamesh-borders.exe
     expire_in: 4 hours
     
 manjaro arch:
@@ -79,18 +79,18 @@ manjaro arch:
     # build gigamesh
     - mkdir build
     - cd build
-    - cmake ..
-    - cmake --build . --config Release
+    - cmake .. -DCMAKE_BUILD_TYPE=Release -G"Unix Makefiles"
+    - make -j
     - cd ..
 
   artifacts:
     name: "gigamesh_arch_manjaro"
     paths:
-      - gui/gigamesh.exe
-      - clt/gigamesh-featurevectors.exe
-      - clt/gigamesh-tolegacy.exe
-      - clt/gigamesh-clean.exe
-      - clt/gigamesh-info.exe
-      - clt/gigamesh-borders.exe
+      - build/gui/gigamesh.exe
+      - build/clt/gigamesh-featurevectors.exe
+      - build/clt/gigamesh-tolegacy.exe
+      - build/clt/gigamesh-clean.exe
+      - build/clt/gigamesh-info.exe
+      - build/clt/gigamesh-borders.exe
     expire_in: 4 hours
   
