--- a/gui/CMakeLists.txt
+++ b/gui/CMakeLists.txt
@@ -90,4 +90,9 @@ target_include_directories(gigamesh PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
 target_include_directories(gigamesh PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 
 target_link_libraries(gigamesh PRIVATE Qt5::Widgets Qt5::OpenGL Qt5::Gui Qt5::Network psalm spherical_intersection OpenGL::GL gigameshCore)
+
+if(MINGW)
+	target_link_libraries(gigamesh PRIVATE ssl crypto crypt32 iphlpapi)
+endif()
+
 target_compile_options(gigamesh PRIVATE -DTHREADS -DNUM_THREADS=11 -DCOMP_USER=\"${COMP_USER}\" -DCOMP_DATE=\"${COMP_DATE}\" -DCOMP_GITHEAD=\"${COMP_GITHEAD}\" -DVERSION_PACKAGE=\"${VERSION_PACKAGE}\" -DCOMP_EDIT=\"${COMP_EDIT}\")
