--- a/external/spherical_intersection/CMakeLists.txt
+++ b/external/spherical_intersection/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required (VERSION 3.1)
 set (CMAKE_CXX_STANDARD 17)
 project (spherical_intersection VERSION 1.0.0 DESCRIPTION "mesh sphere intersection library")
-add_library(spherical_intersection
+add_library(spherical_intersection STATIC
 									src/mesh.cpp
 									src/graph.cpp
 									src/graph.cpp
