--- a/external/spherical_intersection/CMakeLists.txt
+++ b/external/spherical_intersection/CMakeLists.txt
@@ -1,5 +1,4 @@
-cmake_minimum_required (VERSION 3.1)
-set (CMAKE_CXX_STANDARD 17)
+cmake_minimum_required (VERSION 3.13)
 project (spherical_intersection VERSION 1.0.0 DESCRIPTION "mesh sphere intersection library")
 add_library(spherical_intersection STATIC
 									src/mesh.cpp
@@ -21,6 +20,8 @@ target_include_directories(spherical_intersection PRIVATE include/spherical_inte
 #set(RELEASE_OPTIONS "-O3")
 #target_compile_options(spherical_intersection PRIVATE "$<$<CONFIG:Debug>:${DEBUG_OPTIONS}>")
 #target_compile_options(spherical_intersection PRIVATE "$<$<CONFIG:Release>:${RELEASE_OPTIONS}>")
+
+target_compile_features(spherical_intersection PRIVATE cxx_std_17)
 
 target_include_directories(spherical_intersection PUBLIC
 							$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
